--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -441,6 +441,18 @@
 	}	
 }
 
+/* Notice
+========================================================================== */
+
+.notice {
+	font-size: rem(13px);
+	margin: 0 0 20px 0;
+	&:before {
+		content: 'Note:';
+		font-weight: bold;
+	}
+}
+
 /* Tabs
 ========================================================================== */
 
