Add scroll top / bottom buttons

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -176,5 +176,12 @@
 	{$SCRIPTS}
 
 	<!-- EVENT overall_footer_body_after -->
+
+	<a href="#" class="scroll-to-top" title="Scroll to Top">
+		<i class="icon icon-lg fa-chevron-up" aria-hidden="true"></i>
+	</a>
+	<a href="#" class="scroll-to-bottom" title="Scroll to Bottom">
+		<i class="icon icon-lg fa-chevron-down" aria-hidden="true"></i>
+	</a>
 </body>
 </html>
