--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/stylesheet.scss
@@ -25,6 +25,7 @@
 @import 'viewforum';
 @import 'viewtopic';
 @import 'posting';
+@import 'members';
 @import 'header';
 @import 'footer';
 // @import 'responsive';
