--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -105,16 +105,13 @@
 	right: 30px;
 	z-index: 100;
 	@include sizing(40px, 40px);
-	border-radius: 100%;
+	border-radius: 3px;
 	background: $color-10;
 	padding: 10px;
 	text-align: center;
 	@include transition(background 0.3s ease-in-out);
 	&, &:hover {
 		color: $color-01;
-	}
-	&:hover {
-		background: $color-04;		
 	}	
 }
 
