Search results and page styles

--- a/khyeras/_dev/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/navbar_header.html
@@ -137,7 +137,7 @@
 		<!-- EVENT overall_header_searchbox_before -->
 		<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
 			<li class="dropdown-container">
-				<a href="#"><span>Search</span></a>
+				<a href="{U_SEARCH}"><span>Search</span></a>
 				<i class="icon icon-lg fa-chevron-down dropdown-trigger"></i>
 				<div id="search-box" class="search-box search-header dropdown" role="search">				
 					<div class="dropdown-contents">
