--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -100,24 +100,30 @@ fieldset.submit-buttons {
 ========================================================================== */
 
 fieldset dl {
-	@include flex-flow(row wrap);
+	@include clearfix('&');
 	margin: 0 -10px 20px -10px;
 	dt, dd {
 		padding: 0 10px;
 		min-width: 1px;
-		.inputbox, select {
+		.inputbox, select, label {
 			margin-bottom: 0;
 		}
+		input[type='number'].inputbox {
+			margin-right: 5px;
+		}
 	}
-	dd label {
-		margin-bottom: 0;
+	dt {
+		float: left;
+	}
+	dd {
+		overflow: auto;
 	}
 }
 
 fieldset:not(.polls) {
 	dl {
 		dt {
-			flex: 0 0 25%;
+			width: 250px;
 			label {
 				& + br {
 					display: none;
@@ -129,13 +135,11 @@ fieldset:not(.polls) {
 				}
 			}
 			& + dd {
-				@include flex(base);
 				margin-left: 0;
 			}
 		}
 		dd {
-			@include flex(full);
-			margin-left: 25%;
+			margin-left: 250px;
 			margin-bottom: 5px;
 			&:last-child {
 				margin-bottom: 0;
@@ -144,7 +148,7 @@ fieldset:not(.polls) {
 	}
 	&.fields1 dl {
 		dt {
-			flex: 0 0 200px;
+			width: 200px;
 			& + dd {
 				margin-left: 0;
 			}
@@ -153,17 +157,6 @@ fieldset:not(.polls) {
 			margin-left: 200px;
 		}
 	}
-	&.fields2 dl {
-		dt {
-			flex: 0 0 250px;
-			& + dd {
-				margin-left: 0;
-			}
-		}
-		dd {
-			margin-left: 250px;
-		}
-	}	
 }
 
 /* Inline Block Form Content
