--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -174,11 +174,8 @@
 ========================================================================== */
 
 fieldset.polls dl {
-	dd:not(.resultbar) {
-		@include flex;
-	}
 	dt {
-		flex: 0 0 20%;
+		width: 20%;
 	}
 }
 
@@ -186,19 +183,30 @@ fieldset.polls dl {
 	min-height: 0 !important;
 	.content {
 		fieldset.polls dl {
+			position: relative;
 			&.voted {
 				font-weight: bold;		
 			}
-			.poll_option_select input[type='radio'] {
-				margin: 0;
+			dt, dd {
+				line-height: 22px;
+			}
+			.poll_option_select {
+				position: absolute;
+				top: 1px;
+				left: 20%;
+				& + .resultbar {
+					padding-left: 40px;
+				}
+			}
+			.poll_option_percent, .resultbar {
+				float: left;
 			}
 			.resultbar {
-				flex: 0 0 60%;
+				width: 60%;
 				div[class*='pollbar'] {
 					padding: 0 10px;
 					border-radius: 3px;
-					height: 22px;
-					line-height: 22px;
+					height: 22px;					
 				}
 				div[style='width:0%;'], div[style='width: 0%;'] {
 					width: 20px !important;
@@ -220,6 +228,9 @@ fieldset.polls dl {
 				.pollbar1 {
 					background: mix(black, $color-10, 30%);
 				}																				
+			}
+			.poll_option_percent {
+				width: 20%;
 			}
 			.button1 {
 				margin: 0;
