--- a/khyeras/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/styles/khyeras_v1/template/navbar_header.html
@@ -135,7 +135,7 @@
 			</div>
 		</li>
 		<!-- EVENT overall_header_searchbox_before -->
-		<!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
+		<!-- IF S_DISPLAY_SEARCH -->
 			<li class="dropdown-container">
 				<a href="{U_SEARCH}"><span>Search</span></a>
 				<i class="icon icon-lg fa-chevron-down dropdown-trigger"></i>
