--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_other-sections.scss
@@ -69,11 +69,24 @@ dl.faq {
 	.postprofile dt .username-coloured {
 		display: inline;
 	}
-	.topic-wrapper .post ul.searchresults {
-		list-style: none;
-		margin: 20px 0 0 0;
-		min-width: 1px;
-		@include flex(full);
-		text-align: right;			
+	.topic-wrapper .post {
+		.postbody {
+			.posthilit {
+				background: $color-09;
+				color: $color-08;
+				padding: 3px 5px;
+			}
+			h3 .posthilit {
+				padding-top: 0;
+				padding-bottom: 0;
+			}			
+		}
+		ul.searchresults {
+			list-style: none;
+			margin: 20px 0 0 0;
+			min-width: 1px;
+			@include flex(full);
+			text-align: right;			
+		}
 	}
 }
